[gd_scene load_steps=4 format=2]

[ext_resource path="res://Galaxy/GalaxyStar/GalaxyStar.gd" type="Script" id=1]
[ext_resource path="res://assets/galaxy_stars/star1.svg" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 70.7107

[node name="GalaxyStar" type="Area2D" groups=[
"Galaxy Stars",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="TextPosition" type="Position2D" parent="." groups=[
"Star Text Positions",
]]
position = Vector2( 0, 90 )
[connection signal="input_event" from="." to="." method="_on_GalaxyStar_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_GalaxyStar_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_GalaxyStar_mouse_exited"]
